fix dark mode

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -23,14 +23,16 @@
 		width: 20%;
 	}
 	tbody th {
-		padding: 1px 0 0 10px;
-		font-size: 20px;
+		padding: 1px 0 0 10px!important;
+		font-size: 20px!important;
 	}
-
 	tbody td {
-		padding-top: 6px;
-		padding-bottom: 6px;
-		font-size: 14px;
+		padding-top: 6px!important;
+		padding-bottom: 6px!important;
+		font-size: 14px!important;
+	}
+	tbody>tr:hover>td.title {
+		color: #18BC9C!important;
 	}
 }
 a {
